istio-manifests/0-base-application.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
    - route:
      - destination:
          host: catalog
          subset: v0-5
