istio-manifests/1-inject-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - fault:
      abort:
        percentage:
          value: 1.0
        httpStatus: 400
    route:
    - destination:
        host: catalog
        subset: v1
