istio-manifests/2-fix-fault-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
    - timout: 5s
      route:
      - destination:
          host: catalog
          subset: v1
