istio-manifests/3-fix-fault-canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
    - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: v1
      weight: 50
    retries:
      attempts: 2
      perTryTimeout: 2s
      retryOn: 5xx
    - destination:
        host: catalog
        subset: v2
      weight: 50
