istio-manifests/3-fix-fault-urlmatch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - match:
    - uri:
        exact: "/products"
      uri:
        prefix: "/static"
    route:
      - destination:
          host: catalog
          subset: v2
  - route:
    - destination:
        host: catalog
        subset: v1
