istio-manifests/4-fix-fault-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
    - route:
      - destination:
          host: catalog
          subset: v2
