istio-manifests/canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
    - catalog
  http:
  - route:
    - destination:
        host: catalog
        subset: v1
      weight: 80
    - destination:
        host: catalog
        subset: v2
      weight: 20
