istio-manifests/gateway-v1-v2split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme
spec:
  hosts:
  - "*"
  gateways:
  - acme-gateway
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(logged-in)(;.*)?$"
    route:
    - destination:
        host: frontend
        version: v2
        port:
          number: 3000 
    - route:
      - destination:
          host: frontend
          version: v1
          port:
            number: 3000
